# optbyes

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
byesopt/: exception.py  optbyes.py  prob.py  utils.py
experiments/: experiment_all_combinations.py
old/optbyes/algorithms/: optbyes.py
old/optbyes/classes/: factory.py
old/optbyes/utils/: utils.py
optbyes/: __init__.py  _config.py  _exception.py  _typing.py  exception.py  optbyes.py  problem.py
optbyes/algorithm/: algorithm.py
optbyes/algorithm/integer_planning_problems/tests/: test_base_ilp.py
optbyes/algorithm/tests/: test_solver_with_gurobi.py
optbyes/drawing/: graph.py
optbyes/problem/: problem.py
optbyes/solver/: solver.py
optbyes/solver/integer_planning_problems/: factory.py  integer_planning_problems.py
optbyes/solver/tests/: test_solver_with_gurobi.py
optbyes/utils/: __init__.py  converter.py  generator.py  make_team_priority_array.py
optbyes/utils/tests/: test_generate_team_prioritites.py
tests/: test_byes.py  test_optbyes.py
tests/problem/: test_base_problem.py
tests/utils/: test_generate_team_priorities.py
