[tool.poetry]
name = "optbyes"
version = "0.1.0"
description = "byesを最小にするスケジュールの作成"
authors = ["hrt0809 <hrt.ueda0809@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gurobipy = "9.5.2"
gurobipy-stubs = "*"
matplotlib = "*"
networkx = "^2.8.8"
scipy = "^1.9.3"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
pyproject-flake8 = "*"
mypy = "*"
isort = "*"
pre-commit = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Following configuration are added manually
[tool.flake8]
max-line-length = 119
max-doc-length = 111
max-complexity = 10
select = "C,E,F,W,B"
ignore = "E203"
docstring-convention = "numpy"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
)
'''

[tool.mypy]
# common
python_version = "3.10"
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
# warning
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[tools.isort]
profile = "black"
line_length = 119
